package io.github.daniil547.board;

public enum BoardVisibility {
    PUBLIC,
    WORKSPACE,
    PRIVATE
}
