package io.github.daniil547.user.member;

public enum Role {
    OWNER,
    ADMIN,
    MEMBER,
    GUEST
}
