package io.github.daniil547.workspace;

public enum WorkspaceVisibility {
    PUBLIC,
    PRIVATE
}
